@@ -3,6 +3,7 @@ Phonetooth
 - Improved device discovery, takes less time
 - Improved file transfer with obex-data-server
 - Import contacts from file
+- Send message to multiple contacts
 
 version 0.3.1 (30-03-2008)
 - Made phonetooth compatible with python 2.4
